--- a/task1.3.ipynb
+++ b/task1.3.ipynb
@@ -29,11 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the greatest Python Programming youve ever seen!\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Welcome to Python Programming!')"
+    "print('Welcome to the greatest Python Programming youve ever seen!')"
    ]
   },
   {
@@ -64,7 +72,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "The job was done greatly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> ### It`s a **good day** to write some *code*!\n",
+    ">- Step 1: type the stuff\n",
+    ">- Step 2: **celebrate** yourself! (use the following link!)\n",
+    "><br> [link] (https://youtu.be/3GwjfUFyY6M?si=iBp4-_foTGPvcAAa)\n",
+    "> [https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEijIp13eK2QDnRIS8dGWKjRmO99qBXBCMOgCVkT0Ke4Yrx4bJvxhLprC2QH6bE3NcrzVSieAYmrvbW_cIEM-lPjYJn06T4bc4YgI7L5znYoG7IPtqp3CT2WQyFNROAT_r8EkM6O8JQK39g/s1600/1+celebrating+kids.jpeg]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,6 +101,26 @@
     "**<a id=\"#\">Task 1.3.4.</a>** Markdown is not only about plain boring text. It is a very simple and widely used hypertext language which allows text formatting. Make yourself a little familiar with the Markdown syntax by [clicking here](https://www.markdownguide.org/basic-syntax/).\n",
     "\n",
     "**<a id=\"#\">Task 1.3.5.</a>** Double-click on your previously created Markdown cell above to enter its editing mode. Change the text, experiment with the Markdown language. For example, add some words, make words bold-typed, etc. You can also embed a YouTube video."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
    ]
   },
   {
@@ -115,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
