--- a/task3.ipynb
+++ b/task3.ipynb
@@ -70,11 +70,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (2105582248.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[76]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mresult = numpy.zeros(img_in.shape)\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "def meanfilter(img_in, size):\n",
+    "# def meanfilter(img_in, size):\n",
     "    result = numpy.zeros(img_in.shape)\n",
     "    n = (size - 1) // 2\n",
     "    for p in numpy.ndindex(img_in.shape):\n",
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7aec854f5b50>"
+       "<matplotlib.colorbar.Colorbar at 0x7aec85345a90>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
